# Quria

./: .gitattributes  Cargo.toml  LICENSE  README.md  demo.sql  quria.control
sql/: _bootstrap.sql
src/: lib.rs
src/fulltext/: hooks.rs  mod.rs  operators.rs  types.rs
src/fulltext/index/inverted/: inverted.rs  mod.rs
src/fulltext/index/inverted/extension/: amhandler.rs  build.rs  cost.rs  mod.rs  options.rs  scan.rs  vacuum.rs
src/vector/: mod.rs
src/vector/hnsw/: mod.rs
