[package]
name = "quria"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
pgrx = "=0.9.7"
dashmap = { version="5.4.0", features=["rayon", "serde", "raw-api"]}
rayon = "1.7.0"
serde = "1.0.166"
shardio = "0.8.2"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
once_cell = "1.18.0"
dirs = "5.0.1"
serde_json = "1.0.103"
num_cpus = "1.16.0"
unicode-segmentation = "1.10.1"
identity-hash = "0.1.0"

[dev-dependencies]
pgrx-tests = "=0.9.7"

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
